--- a/contest 1.1/contest 1.1
+++ b/contest 1.1/contest 1.1
@@ -1,1 +1,3 @@
-predicting mobile phone like dislike using MP Neuron and Perceptron models
+predicting mobile phone like dislike using MP Neuron and Perceptron models 
+model classes have been used as it was taught in hands on lectures
+
